@@ -339,7 +339,7 @@ def sanity_check(vcs):
     return True
 
 
-def check_recommended_files(data):
+def check_recommended_files(data, vcs):
     """Do check for recommended files.
 
     Returns True when all is fine.
@@ -359,9 +359,9 @@ include *
 global-exclude *.pyc
 
 You may want to quit and fix this.
+Installing %(setuptools_helper_package)s may help too.
 We will continue with the prerelease.
-
-"""
+""" % dict(setuptools_helper_package=vcs.setuptools_helper_package)
         # We could ask, but simply printing it is nicer.
         #if not ask(q, default=True):
         #    return False
